[package]
name = "hub_util"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hub_util"

[lib]
name = "hub_util"

[dependencies]
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
clap = { version = "4.5.29", features = ["derive"] }
serde_json = "1.0.138"


[dev-dependencies]
rand = "0.9.0-beta.1"